--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main">
         <section class="arrow">
           <img class="arow" src="./image/arrow-back.svg" alt="back" />
-          <div class="direct">
+          <div class="direction">
             <p>BACK</p>
           </div>
         </section>
